--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=false
 DEBUGBAR_ENABLED=false
-APP_URL=http://localhost:8000
+APP_URL=
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
